src/components/PokemonPopulate/PokemonPopulate.css
.pokedexContainer {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 20px;
    height: 80vh;
    position: relative;
    padding-top: 40px;
}

.notGrid {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 56vh;
    gap: 20px;
    position: relative;
}

.mainPokemonContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 20px;
    cursor: pointer;
    font-family: "Fira Sans", "Trebuchet MS", Ubuntu, Helvetica, Arial sans-serif;
    font-weight: bold;
    line-height: 1.2;
    transition: transform 0.1s;
}

.mainPokemonContainer:hover {
    transform: scale(1.1);
}

.pokemonContainer {
    height: 300px;
    width: 167px;
    padding: 10px;
    border: 5px solid rgb(14, 14, 14);
}

.pokeballChangeSprites {
    cursor: pointer;
    position: absolute;
    right: 0;
}

.pokeballChangeSprites:hover {
    transform: scale(1.5);
}

.pokemonIconsContainer {
    height: 180px;
}

